Some changes in css

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
                     <input placeholder="Title/Position*" type="text" name="title-position" autocomplete="on">
 
 
-                    <input placeholder="Title/Position*" type="text" name="title-position" autocomplete="on">
-                    <!-- <select required size="3" aria-placeholder="Practice / Institution*">
+                    <div class="select">Select</div>
+                    <select required size="3" aria-placeholder="Practice / Institution*">
                         <option value="value1">Option 1</option>
                         <option value="value2">Option 2</option>
                         <option value="value3">Option 3</option>
-                    </select> -->
+                    </select>
                     <input placeholder="Email Address*" type="email" name="email" autocomplete="on">
                     <input placeholder="Phone Number*" type="number" name="number" autocomplete="on">
 
 
 
-                    <input placeholder="Title/Position*" type="text" name="title-position" autocomplete="on">
+                    <div class="select">Select</div>
                     <!-- <select required size="5" aria-placeholder="Medical Profession*">
                         <option value="value1">Option 1</option>
                         <option value="value2">Option 2</option>
@@ -40,18 +40,15 @@
                         <option value="value4">Option 4</option>
                         <option value="value5">Option 5</option>
                     </select> -->
-
-
-
-
-                    <input placeholder="Title/Position*" type="text" name="title-position" autocomplete="on">
+                </div>
+                <div class="select">Select</div>
                     <!-- <select required size="3" aria-placeholder="Type of Inquiry*">
                         <option value="value1">Option 1</option>
                         <option value="value2">Option 2</option>
                         <option value="value3">Option 3</option>
-                    </select>
-                    <input placeholder="Enter Message*" type="text" name="text" autocomplete="on"> -->
-                </div>
+                    </select>-->
+
+                    <textarea id="textarea-style" wrap="off" cols="30" rows="10" placeholder="Enter Message*" type="text" name="text"></textarea>
                 <div class="send-message">
                     <input type="submit" id="button" style="display: none;">
                     <label  class="style-for-button" for="button">Send Message</label>
@@ -59,7 +56,7 @@
                </form>
             </div>
         </div>
-            <div class="map" style="background-color: red;"></div>
+            <div class="map" style="background-color: red; height: 100vh;"></div>
         </div>
     </div>
 </body>
