--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>test task</title>
     <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 </head>
 <body>
     <div class="contact-form-task-and-map-grid">
@@ -17,36 +18,33 @@
             <div class="contact-us-form-grid">
                <form>
                 <div class="input-form-grid">
-                    <input placeholder="Full Name*" type="text" name="name" autocomplete="on">
-                    <input placeholder="Title/Position*" type="text" name="title-position" autocomplete="on">
+                    <input class="style-input" placeholder="Full Name*" type="text" name="name" autocomplete="on">
+                    <input class="style-input" placeholder="Title/Position*" type="text" name="title-position" autocomplete="on">
 
 
-                    <div class="select">Select</div>
-                    <select required size="3" aria-placeholder="Practice / Institution*">
-                        <option value="value1">Option 1</option>
+                    <select id="sel" required size="3" aria-placeholder="Practice / Institution*">
+                        <option id="a" value="value1">Option 1</option>
                         <option value="value2">Option 2</option>
                         <option value="value3">Option 3</option>
                     </select>
-                    <input placeholder="Email Address*" type="email" name="email" autocomplete="on">
-                    <input placeholder="Phone Number*" type="number" name="number" autocomplete="on">
+                    <input class="style-input" placeholder="Email Address*" type="email" name="email" autocomplete="on">
+                    <input class="style-input" placeholder="Phone Number*" type="number" name="number" autocomplete="on">
 
 
 
-                    <div class="select">Select</div>
-                    <!-- <select required size="5" aria-placeholder="Medical Profession*">
+                    <select required size="5" aria-placeholder="Medical Profession*">
                         <option value="value1">Option 1</option>
                         <option value="value2">Option 2</option>
                         <option value="value3">Option 3</option>
                         <option value="value4">Option 4</option>
                         <option value="value5">Option 5</option>
-                    </select> -->
+                    </select>
                 </div>
-                <div class="select">Select</div>
-                    <!-- <select required size="3" aria-placeholder="Type of Inquiry*">
+                    <select required size="3" aria-placeholder="Type of Inquiry*">
                         <option value="value1">Option 1</option>
                         <option value="value2">Option 2</option>
                         <option value="value3">Option 3</option>
-                    </select>-->
+                    </select>
 
                     <textarea id="textarea-style" wrap="off" cols="30" rows="10" placeholder="Enter Message*" type="text" name="text"></textarea>
                 <div class="send-message">
@@ -56,7 +54,7 @@
                </form>
             </div>
         </div>
-            <div class="map" style="background-color: red; height: 100vh;"></div>
+            <div id="map"></div>
         </div>
     </div>
 </body>
